--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torchvision
-torch
+torchvision==0.22.0
+torch==2.7.0
 pyquaternion
 pyyaml
 rospkg
@@ -12,3 +12,5 @@ einops
 packaging
 h5py
 ipython
+
+wandb
